[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FogVision"
version = "0.1.3"
description = "Fog prediction from images using deep learning"
authors = [{name = "Joel Nicolow"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.5.0",
  "torchvision>=0.20.0",
  "numpy>=2.2",
  "pandas>=2.2",
  "scikit-learn>=1.6",
  "matplotlib>=3.10",
  "matplotlib-inline>=0.1.6",
  "seaborn>=0.13",
  "pillow>=11.0",
  "joblib>=1.4",
  "ipython>=9.10",
  "ipykernel>=6.29.5"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

[project.scripts]
fogvision = "fogvision.fv:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["fogvision*"]

[tool.setuptools.package-data]
"fogvision.models" = ["*.pkl"]